--- a/estiloux/estilo.css
+++ b/estiloux/estilo.css
@@ -26,12 +26,10 @@ h1{
     height: 100%;
     max-width: 992px;
     margin: 0 auto;
-    border: 3px solid snow;
+    border: 3px solid rgb(48, 35, 35);
 }
 nav{
     width: 400px;
     height: 100%;
     border:3px, solid white;
-      
-
-}
+    }
