--- a/estiloux/estilo.css
+++ b/estiloux/estilo.css
@@ -4,8 +4,19 @@
     padding: 0;
     box-sizing: 0;
 }
+
+html, body{ 
+    height: 100%;
+    border: 2px solid red;
+}
 body{
     background-color: #EFEFEF;
+}
+
+header, footer{
+    width: 100%;
+    height: 10px;
+    background-color: #727272;
 }
 header{
     background-color: #727272;
@@ -13,12 +24,14 @@ header{
 .header-flex{
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 h1{
-    font-family:Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 30px;
-    font-weight: 300px;
+    font-family:Verdana, sans-serif;
+    font-size: 26px;
+    font-weight: 100;
     color: white;
+
 }
 
 .layout-grid{
@@ -26,10 +39,75 @@ h1{
     height: 100%;
     max-width: 992px;
     margin: 0 auto;
-    border: 3px solid rgb(48, 35, 35);
+
+}
+
+.ux{
+    font-size: 30px;
+    font-style: italic;
+    font-weight: 600;
+    font-family: sans-serif;
+    
 }
 nav{
-    width: 400px;
-    height: 100%;
-    border:3px, solid white;
+
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 400px;
+  height: 100%;
+
+ }
+
+ nav a{ 
+    display: flex;
+    justify-content:center ;
+    align-items: center;
+    width: 100%;
+    height: 80px;
+    color: white;
+    text-decoration: none;
+    font-family: Verdana, sans-serif;
+   transition:  background-color 0.4s, margin-left .8s, margin-bottom .8s ;
+ }
+
+
+ nav a:hover{
+    background-color:rgba(232, 232, 232, 0.5);
+    margin-left: 10px;
+    margin-bottom: 10px;
+    border-radius: 8px;
+ }
+
+    main{
+        width: 100%;
+        height: 80%;
+        border: 3px, solid red;
     }
+    
+ 
+ .main-flex{
+    
+    width: 100%;
+    height: 800px;
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border: 2px solid green;
+ }
+
+.harmonia{
+   border: 2px solid black;
+   margin: 10px;
+   width: 700px;
+   height: 500px;
+}
+
+aside{
+    border: 3px solid blue;
+   margin: 10px;
+   width: 250px;
+   height: 500px;
+   
+}
