--- a/estiloux/estilo.css
+++ b/estiloux/estilo.css
@@ -1,113 +1,204 @@
-/* reset de propriedades do CSS*/
-*{
+/* reset de propriedades do css */
+* {
     margin: 0;
     padding: 0;
-    box-sizing: 0;
+    box-sizing: border-box;
 }
 
-html, body{ 
+html, body {
     height: 100%;
-    border: 2px solid red;
+
 }
-body{
+
+body {
     background-color: #EFEFEF;
+
+  
+
 }
 
-header, footer{
+/******************** HEADER *********************/
+header, footer {
     width: 100%;
-    height: 10px;
+    height: 10%;
     background-color: #727272;
 }
-header{
-    background-color: #727272;
-}
-.header-flex{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-h1{
-    font-family:Verdana, sans-serif;
-    font-size: 26px;
-    font-weight: 100;
-    color: white;
 
-}
-
-.layout-grid{
+/* caixa para centralizar o conteúdo */
+.layout-grid {
     width: 100%;
     height: 100%;
     max-width: 992px;
     margin: 0 auto;
-
+    /* border: 3px solid salmon; */
+}
+.header-flex {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;  
 }
 
-.ux{
+h1 {
+    font-family: Verdana, sans-serif;
+    font-size: 26px;
+    font-weight: 100;
+    color: white;
+    /* border: 3px solid white; */
+}
+
+.ux {
     font-size: 30px;
+    margin-left: 3px;
     font-style: italic;
     font-weight: 600;
-    font-family: sans-serif;
-    
+    font-family: monospace;
 }
-nav{
 
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  width: 400px;
-  height: 100%;
-
- }
-
- nav a{ 
-    display: flex;
-    justify-content:center ;
-    align-items: center;
-    width: 100%;
-    height: 80px;
-    color: white;
-    text-decoration: none;
-    font-family: Verdana, sans-serif;
-   transition:  background-color 0.4s, margin-left .8s, margin-bottom .8s ;
- }
-
-
- nav a:hover{
-    background-color:rgba(232, 232, 232, 0.5);
-    margin-left: 10px;
-    margin-bottom: 10px;
-    border-radius: 8px;
- }
-
-    main{
-        width: 100%;
-        height: 80%;
-        border: 3px, solid red;
-    }
-    
- 
- .main-flex{
-    
-    width: 100%;
-    height: 800px;
-
+nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    border: 2px solid green;
- }
-
-.harmonia{
-   border: 2px solid black;
-   margin: 10px;
-   width: 700px;
-   height: 500px;
+    width: 400px;
+    height: 100%;
+    /* border: 3px solid white; */
 }
 
-aside{
-    border: 3px solid blue;
-   margin: 10px;
-   width: 250px;
-   height: 500px;
+nav a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* border: 2px solid red; */
+    width: 100px;
+    height: 80px;
+    color: #E8E8E8;
+    text-decoration: none;
+    font-family: Verdana, sans-serif;
+    transition: background-color 0.4s;
+}
+
+nav a:hover {
+    /* margin-left: 10px;
+    margin-bottom: 10px; */
+    background-color: rgba(232, 232, 232, 0.5);
+}
+
+
+/******************** Main *********************/
+main {
+    width: 100%;
+    height: 80%;
+    padding-top: 20px;
+    padding-bottom: 20px;
    
 }
+/* div com a class main-flex 
+    flex container
+*/
+.main-flex {
+    width: 100%;
+    height: 100%;
+    
+    display: flex;
+    justify-content: space-between;
+   
+
+    
+    /*border: 2px solid green;*/
+}
+
+.harmonia {
+    /* margin: 10px; */
+    width: 700px;
+    height: 100%;
+    background-color: white;
+   overflow: auto;
+    
+}
+
+.harmonia h2{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 13px;
+    font-weight: 400;
+    margin-left: 25px;
+    margin-top: 20px;
+    margin-right: 20px;
+    color: #a8a8aa
+    
+    
+}
+
+.harmonia p{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+
+    font-weight: 400;
+    font-size: 13px;
+    margin-top: 20px;
+    margin-left: 25px;
+    margin-right: 20px;
+    color: #a8a8aa
+    
+    
+}
+
+aside {
+    /* margin: 10px; */
+    width: 250px;
+    height: 100%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+
+    
+}
+
+aside article{
+        background-color: whitesmoke;
+        border: 2px solid black;
+        }
+
+        aside article.buscar-box{
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-evenly;
+
+
+        }
+
+        aside article h3{
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
+            color: #a8a8aa;
+            text-transform: uppercase;
+            text-align: center;
+            padding: 10px;
+            border-bottom: 2px solid #a8a8aa;
+            width: 100%;
+            
+
+        }
+        aside article input,
+        aside article input{
+            height: 25px;
+            margin-top: 10px;
+            margin-bottom: 10px;
+       
+
+        }
+
+        aside article input{
+            border: 1px solid grey;
+            outline-offset: inherit;
+            padding-right: 5px;
+            padding-left: 5px;
+        }
+        
+        aside article button{
+            width: 30px;
+            background-color: #727272;
+            color: white;
+            border: none;
+            border: 1px solid #727272;
+            cursor: pointer;
+        }
+
